<resources>
    <string name="app_name">AdoptApp</string>
    <string name="AdoptApp">AdoptApp</string>
    <string name="autores"><![CDATA[Made with love by Manu & Mateo]]></string>
    <string name="logo">applogo</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="iniciosesion">Iniciar sesión en AdoptApp</string>
    <string name="correo">Correo</string>
    <string name="contrasena_login">Contraseña</string>
    <string name="noRegistro">No tienes cuenta aún?</string>
    <string name="registrarse">Regístrate</string>
    <string name="iniciar_sesi_n_en_adoptapp">Iniciar sesión en AdoptApp</string>
    <string name="fechaSeleccion">Seleccionar</string>
    <string name="formulario">Formulario de registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="fechaNacimientotext">Fecha de nacimiento</string>
    <string name="lugarNacimiento">Lugar de nacimiento</string>
    <string name="profesion">Profesión</string>
    <string name="contrasena">Contraseña</string>
    <string name="repContrasena">Repita la contraseña</string>
    <string name="condiciones">Aceptar términos y condiciones</string>
    <string name="suscripcion">Desea recibir actualizaciones y noticias?</string>
    <string name="registro">Registrarse</string>
    <string name="actividades">¿A qué se dedica actualmente?</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="contrasena_registro">Contraseña</string>
    <string name="mensaje_error" />
    <string name="correoMain" />
    <string name="errorTexto" />
    <string name="respuesta">Nombre: %s \nApellidos %s \nTeléfono: %s \nCorreo: %s \nLugar de Nacimiento: %s /n Ocupación: %s</string>
    <string name="error1">Usted no ingresó todos los datos</string>
    <string name="error2">Las contraseñas no coinciden</string>
    <string name="error3">La contraseña debe tener mínimo seis (6) caracteres</string>
    <string name="error4">No aceptó términos y condiciones</string>
    <string name="error5">Los datos son incorrectos</string>

    <string-array name="lugar_nacimiento">
        <item>Seleccione una ciudad</item>
        <item>Medellín</item>
        <item>Bogotá</item>
        <item>Barranquilla</item>
        <item>Bucaramanga</item>
        <item>Cali</item>
        <item>Cúcuta</item>
        <item>Ibagué</item>
        <item>Santa Marta</item>
        <item>Manizales</item>
        <item>Pereira</item>
        <item>Montería</item>
        <item>Pasto</item>
    </string-array>

    <string-array name="actividades">
        <item>Seleccione una opción</item>
        <item>Trabajo</item>
        <item>Estudio</item>
        <item>Ninguna de las anteriores</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="miPerfil">Mi perfil</string>
    <string name="voluntarios">Voluntarios</string>
    <string name="hogarTemporal">Dar hogar temporal</string>
    <string name="darAdopcion">Dar en adopción</string>
    <string name="adoptar">Adoptar</string>
    <string name="inicio">Inicio</string>
    <string name="funcionAdoptar">"En este fragmento se encontrarán las fotos de los perros disponibles para adopción con su información "</string>
    <string name="darAdopciondescripcion">En este fragmento se encuentra un formulario que se deberá llenar para poner un perro en adopción y poder ser revisado por los administradores</string>
    <string name="darHogarDescripcion">"En este fragmento se encontrará un formulario donde se dirá cuántos perros está dispuesta a aceptar la persona "</string>
    <string name="inicioDescripcion">Aquí se encontrarán artículos y noticias sobre el cuidado de los perros</string>
    <string name="perfilDescripcion">Aquí se encontrarán los datos de la persona los cuales se podrán cambiar al igual que la contraseña</string>
    <string name="voluntariosDescripcion">"Este fragmento será para los que deseen ser voluntarios, llenen un formulario para poder ser tenidos en cuenta y también se podrán ver los albergues más cercanos "</string>
    <string name="aviso_darAdopcion">¡Atención! Tenga en cuenta que llenar el formulario no significa que el perro haya sido aceptado. Una vez llene el formulario debe esperar al menos 72 horas a que su petición sea respondida. </string>
    <string name="datosPropietario">Datos del propietario</string>
    <string name="datosPerro">Datos del perro</string>
    <string name="edadPerro_dar">Edad</string>
    <string name="tamanoPerro_dar">Tamaño</string>
    <string name="sexoPerro_dar">Sexo</string>
    <string name="hembra">Hembra</string>
    <string name="macho">Macho</string>
    <string name="esterilizado">Esterilizado</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="vacunas">Vacunas al día</string>
    <string name="fotoPerro_dar">Foto del perro</string>
    <string name="elegir">Elija una foto</string>
    <string name="justificacion">Escriba por qué desea dar el perro en adopción. No omita detalles.</string>
    <string name="justificacionTextView">Justificación</string>
    <string name="inscrir_voluntarios">Llena el formulario y sé voluntario</string>
    <string name="albuergues">Mira los albergues más cercanos</string>
    <string name="imgVoluntario">imgVoluntario</string>
    <string name="textoVoluntarios">Ayuda a los animales que han quedado desamparados y ofrecerles una segunda oportunidad, una nueva vida que les colme del afecto que les fue negado por quienes les maltrataron y abandonaron.</string>
    <string name="titulo_formVoluntarios">Formulario para Voluntarios</string>
    <string name="aviso_formularioVol">Al llenar este formulario usted está aceptando el tratamiento de sus datos. Se le enviará un correo con los albuergues más cercanos a su ubicación junto con toda la información que pueda necesitar.</string>
    <string name="direccionResidencia">Dirección de residencia</string>
    <string name="envio_formulario">Enviar formulario</string>
    <string name="aviso2">Llene el formulario si desea ser parte del equipo. Será contactado en un plazo de 24 horas.</string>
    <string name="ciudad">Ciudad</string>
    <string name="numeroPerros">Cantidad de perros que puede ayudar</string>
    <string name="experiencia">¿Cuenta con experiencia con el cuidado de perros?</string>
    <string name="perro_image">Perro Image</string>
    <string name="ver_mas">Conoce más sobre mí</string>

    <string-array name="Tamano">
        <item>Pequeño</item>
        <item>Mediano</item>
        <item>Grande</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="actualizar_perfil">Actualizar perfil</string>
    <string name="actualizar_password">Actualizar contraseña</string>
    <string name="imagenPerfil">imagenPerfil</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="antigua_contrasena">Antigua contraseña</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="imagen_noticia">imagen_noticia</string>
    <string name="titulo_noticia">¿Por qué adoptar un perro?</string>
    <string name="cuerpo_noticia">El verano ha llegado y el número de perros abandonados por dueños que no saben que hacer con su mascota aumenta considerablemente. Los perros con suerte serán encontrados y llevados a refugios y otros tendrán un final trágico. Algunos incluso han sido cruelmente maltratados y explotados, se merecen una segunda oportunidad...</string>
    <string name="ver_mas_noticia">Ver más</string>
    <string name="detalle_bar_name">Conocer más</string>
    <string name="descripcion_noticia">Aqui se tendra una pequenia descripcion de la noticia, la cual sera de un maximo de 5 lineas, y termina con la opcion de continuar leyendo o algo asi...</string>
    <string name="titulo_noticia_ejemplo">Aqui ira el titulo de la noticia</string>
    <string name="noticia_detalle_bar_name">"Noticias"</string>
    <string name="adoptame">A D O P T A M E</string>
</resources>